--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <button type="button" class="btn btn-outline-dark">Learn more</button>
         <h4><span class="font-weight-bold">Taking place from</span>14-18th June!</h4>
         <h5>Sign up to be a mentor or judge</h5>
-    </div>      
+    </div>
+    <div class="container-fluid"></div>
 </body>
 </html>
