second section added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Hackathon</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/first-section.css">
+    <link rel="stylesheet" href="css/second-section.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -27,6 +28,23 @@
         <h4><span class="font-weight-bold">Taking place from</span>14-18th June!</h4>
         <h5>Sign up to be a mentor or judge</h5>
     </div>
-    <div class="container-fluid"></div>
+    <div class="container-fluid text-center second-section">
+        <button type="button" class="btn btn-outline-dark display-3">Read our Code of Conduct</button> <br><br>
+        <button type="button" class="btn btn-outline-dark display-3">Read our Hacker's guide (Important!)</button> <br><br>
+        <p>Prizes</p>
+        <p><small>Description</small></p>
+        <h4>General Prizes</h4>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img src="images/prize1.jpg" class="img-rounded" alt="Prize 1" style="width:100%"> 
+                </div>
+                <div class="col">
+                    <img src="images/prize2.jpg" class="img-rounded" alt="Prize 2" style="width:100%"> 
+                </div>
+            </div>
+        </div> <br>
+        <button type="button" class="btn btn-outline-dark">Register here</button>
+    </div>
 </body>
 </html>
