frequently asked question added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,63 @@
                 </div>
             </div>
         </div> <br>
-        <button type="button" class="btn btn-outline-dark">Register here</button>
+        <button type="button" class="btn btn-outline-dark">Register here</button> <br> <br>
+        <table class="table">
+            <thead>
+              <tr>
+                <th>Sunday</th>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>title</td>
+                <td>title</td>
+                <td></td>
+                <td>title</td>
+                <td>title</td>
+              </tr>
+              <tr>
+                <td>title</td>
+                <td>title</td>
+                <td></td>
+                <td></td>
+                <td>title</td>
+              </tr>
+              <tr>
+                <td>title</td>
+                <td>title</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>title</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+          <br>
+          <h2>Frequently asked questions</h2>
+          <p>What's a hackathon?  <button class="btn btn-success" data-toggle="collapse" data-target="#answer1">+</button></p>
+          <div id="answer1" class="collapse">
+             I don't have a girlfriend.
+           </div>
+           <p>When do we submit out projects?  <button class="btn btn-success" data-toggle="collapse" data-target="#answer2">+</button></p>
+          <div id="answer2" class="collapse">
+             27th June.
+           </div>
+
+           <p>Looking for an answer to another question?</p>
+           <p>Email us at hACCESSteam@gmail.com</p>
+            <br>
+           <h4>Judge Panel</h4>
     </div>
 </body>
 </html>
