judges panel added

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <img src="images/prize1.jpg" class="img-rounded" alt="Prize 1" style="width:100%"> 
+                    <img src="images/prizes/prize1.jpg" class="img-rounded" alt="Prize 1" style="width:100%"> 
                 </div>
                 <div class="col">
-                    <img src="images/prize2.jpg" class="img-rounded" alt="Prize 2" style="width:100%"> 
+                    <img src="images/prizes/prize2.jpg" class="img-rounded" alt="Prize 2" style="width:100%"> 
                 </div>
             </div>
         </div> <br>
@@ -101,6 +101,35 @@
            <p>Email us at hACCESSteam@gmail.com</p>
             <br>
            <h4>Judge Panel</h4>
+           <div class="row">
+               <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="images/judges/judge1.jpg" alt="Judge 1">
+                    <div class="card-body">
+                      <h5 class="card-title">Yashh Sachin Kotecha</h5>
+                      <p class="card-text">Love cats and math.</p>
+                    </div>
+                  </div>
+               </div>
+               <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="images/judges/judge2.jpg" alt="Judge 2">
+                    <div class="card-body">
+                      <h5 class="card-title">Shyngys Shynbolatov</h5>
+                      <p class="card-text">Namaste! Aap kaise hai? No, I am not an Indian, but I would love to visit India.</p>
+                    </div>
+                  </div>
+               </div>
+               <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="images/judges/judge3.jpg" alt="Judge 3">
+                    <div class="card-body">
+                      <h5 class="card-title">Third judge</h5>
+                      <p class="card-text">I am just a third judge.</p>
+                    </div>
+                  </div>
+               </div>
+           </div>
     </div>
 </body>
 </html>
